app/assets/stylesheets/components/_slideout_menu.scss
.slideout-menu {
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  height: 100%;
  background-color: $sch3-lightened-navy;
  z-index: 100;
  padding: $base-spacing;
  width: 256px;
  @include media($small-laptop) {
    width: 40%;
  }
  @include media($tablet) {
    width: 70%;
  }
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  display: none;
  text-transform: uppercase;
  font-family: $heading-font-family;
  a {
    @include link-color-scheme($warm-black, $warm-black);
    padding: $large-spacing;
    padding-right: 100px;
  }
  li {
    margin-bottom: $large-spacing;
    border-bottom: 1px solid $sch3-complement;
    padding: 0.2em;
    @include media($tablet) {
      font-size: 1.77rem;
    }
    width: 80%;
  }
}

.slideout-panel {
  position:relative;
  z-index: 1;
  will-change: transform;
}

.slideout-open,
.slideout-open body,
.slideout-open .slideout-panel {
  overflow: hidden;
}

.slideout-open .slideout-menu {
  display: block;
}

